--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "reviews server and db",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "RIZZTOWN",
   "license": "ISC",
@@ -13,5 +13,9 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "pg": "^8.7.3"
+  },
+  "devDependencies": {
+    "jest": "^27.5.1",
+    "supertest": "^6.2.2"
   }
 }
